--- a/src/people/index.html
+++ b/src/people/index.html
@@ -284,6 +284,42 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- Elliot -->
+      <div id="person-elliot" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/elliot.png" | prepend: site.baseurl }}" alt="Elliot Lines Smith" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png " | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Elliot Lines Smith</h2>
+                  <h3 class="bio-sub">Developer</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-elliot.jpg" | prepend: site.baseurl }}" alt="Elliot Lines Smith" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Elliot is a bit of a dark horse, pulling off a degree in Software Engineering from the University of Canterbury, while simultaneously serving as a “grunt” in the New Zealand Defence Force Army Reserve. Add to that a semester abroad and a growing love of kite surfing, and you’ll quickly realise Elliot can pack a lot into a day. He has a true love of app development (experience in both native and cross-platform) and User Experience design. In his role as a Support Developer, he will be front and centre helping our partners get the best from their bespoke software. A passion for all things code means you’ll also spot him eyeballs deep in some of our JS-based projects.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/elliot"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Elliot</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- Ersin -->
       <div id="person-ersin" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
