Updated Fi's job title

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -419,7 +419,7 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Fiona Beaton</h2>
-                  <h3 class="bio-sub">Administrative Guru</h3>
+                  <h3 class="bio-sub">Office Operations Manager / EA</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-fiona.jpg" | prepend: site.baseurl }}" alt="Fiona Beaton" />
                   </div>
