Added new case study for Interlead connector

--- a/src/case-studies/appraisal-connector/index.html
+++ b/src/case-studies/appraisal-connector/index.html
@@ -1,18 +1,18 @@
 ---
 layout: default
-title: Case Studies | Appraisal Connector
-casestudyname: Appraisal Connector
+title: Case Studies | InterLEAD Connector
+casestudyname: InterLEAD Connector
 casestudyid: 3
 image: /img/case-studies/interlead-1.jpg
-excerpt: Interlead chose Media Suite to develop the software behind Appraisal Connector&trade; - an online appraisal system designed to enhance the professional learning of New Zealand teachers.
+excerpt: InterLEAD chose Media Suite to develop the software behind InterLEAD Connector&trade; - an online appraisal system designed to enhance the professional learning of New Zealand teachers.
 ---
 <div id="main-wrap" class="internal-page case-study">
 
   <div class="max-1200 align-center clearfix">
-    <h1 class="lowercase underline-orange">Appraisal Connector</h1>
+    <h1 class="lowercase underline-orange">InterLEAD Connector</h1>
     {% include crumbs.html %}
     <div class="case-study-intro max-1000">
-      <p>Interlead chose Media Suite to develop the software behind Appraisal Connector&trade; - an online appraisal system designed to enhance the <span class="fancy-pants-font">professional learning</span> of New Zealand teachers.</p>
+      <p>A <span class="fancy-pants-font">one size fits one</span> appraisal system for teachers</p>
     </div>
 
     <div class="case-study-icons">
@@ -27,27 +27,68 @@ excerpt: Interlead chose Media Suite to develop the software behind Appraisal Co
       </div>
     </div>
 
-    <img src="{{ "/img/case-studies/interlead-1.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
+    <img src="{{ "/img/case-studies/interlead-3.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
     <div class="max-1000 align-left space-below-please">
-      <h2>The challenge</h2>
-      <p>After years of <span class="fancy-pants-font">educational research</span> and following guidelines established by the New Zealand Ministry of Education, InterLEAD consultants developed the philosophy and ideas behind the Appraisal Connector&trade;.</p>
-      <p class="space-below-please">Media Suite were able to capture that philosophy and develop an <span class="fancy-pants-font">intuitive web interface</span> that streamlines the review process, allowing teachers and schools to focus on continued professional development.</p>
+      <h2>Teaching is hard work</h2>
+      <p>In 2019, a shortfall of 850 qualified teachers is expected nationwide. In 2018, teacher strikes and pay negotiations brought to light what teachers are dealing with. Setting pay issues aside, teachers identified the huge workload they are expected to shoulder, the hours they put in to their students’ success, and the roles they have to play each week. Teachers are time poor.</p>
+      <p>On top of the industry-wide challenges is a Ministry of Education requirement for all teachers to provide evidence of professional development when applying for renewal of their teaching registration - a compulsory process.</p>
 
-      <img src="{{ "/img/case-studies/interlead-2.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
-
-      <h2>Core features</h2>
-      <p class="space-below-please">
-        <span class="fancy-pants-font">Appraisal Scheduling</span><br/>
-        <span class="fancy-pants-font">Professional Journals &amp; Goal Setting</span><br/>
-        <span class="fancy-pants-font">A Student Feedback Portal</span><br/>
-        <span class="fancy-pants-font">Individual Reporting</span><br/>
-        <span class="fancy-pants-font">School Wide Reporting</span>
+      <p class="space-below-please">As fewer people choose the teaching profession, schools face new challenges. Fewer teachers in training means fewer potential employees for schools. As schools are hiring teachers from this limited pool, all are competing for an even smaller subset of people considered to be talented, high achieving professionals. Thus, schools are now facing a similar situation to many private companies where competition for skilled employees is high. 
       </p>
 
-      <p>The initial ‘bootstrap’ system was built very rapidly over a couple of months and used to cost effectively <span class="fancy-pants-font">test the market</span>. Features and users were rapidly added over the first year of operation. Now after three years of <span class="fancy-pants-font">continuous development</span> (including a near complete rebuild) Appraisal Connector™ offers a compelling set of features.</p>
-      <p>In 2014 we added a new companion product called Leadership Reflector&trade; - focusing on the feedback of leaders.</p>
-      <p>If you have any questions about this project please contact George Wills on 021 606462.</p>
+      <h2>Learning and growth</h2>
+      <p>Smart private companies are joining a global workplace revolution, targeted at quickly and effectively improving the talent they already have. This approach means a higher proportion of motivated and skilled staff, and the opportunity to hire less experienced or qualified employees with a view to supporting their professional growth.</p>
+
+      <div class="standy-outy-text standy-outy-text--left">
+        <p>"Developing capability, not evaluating it, has become the 21st Century organisational imperative."</p>
+        <p><br/>InterLEAD Consultants</p>
+      </div>
+
+      <p>Traditional evaluation systems are focused on rating others, but by only rating others, an environment of distrust is created. Teachers are focused on surviving the process of being evaluated, rather than engaging with it, and learning from it. Such a system defines a person by what they do or don’t know, and not what they hope to be, what they aspire to do, or what they want to learn. Such a system is no longer the best choice for a modern, people-focussed workplace.</p>
+
+      <p class="space-below-please wrap-fix">As schools approach changes to the workforce, teachers are asking for change. The MoE professional development requirements can be time consuming to produce when only approached every few years. InterLEAD Connector keeps continuous, detailed records of a teacher’s learning journey, which makes meeting those requirements as simple as outputting the system’s stored data.</p>
+
+      <h2>One size fits one</h2>
+      <p>It is time to shift away from what a person doesn’t know, and move towards supporting their professional growth. InterLEAD Connector is a future-focused system for managing and guiding the professional development of teachers. InterLEAD Connector offers efficient processes and minimises the amount of time busy teachers have to invest into their development. It encourages high levels of engagement, creating meaningful professional pathways to self-improvement. </p>
+
+      <p>Most importantly, it contributes to a psychologically safe workplace where teachers are supported, encouraged and empowered to become self-directed learners. InterLEAD Connector takes a “one size fits one” approach, where it can be tailored to meet the needs of the individual and the school, rather than asking all users to conform to a single template or approach.</p>
+
+      <p class="space-below-please">Each user can map their own professional development journey, customising their toolset and resources to support their growth. This customisation applies to school leadership, administration, teachers and students. InterLEAD Connector has two main toolsets - Appraisals and Journals. </p>
+
+      <img src="{{ "/img/case-studies/interlead-4.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please image-centre" />
+
+      <h3>Appraisals</h3>
+      <p>Appraisals support teachers in analysing their own performance from a growth perspective, offering step by step progress towards a high level of competency in key skills or areas. Teachers can then self-review as they work towards this competency, using a guided process at an accelerated pace.</p>
+
+      <p>Rather than being subject to a top-down internal evaluation process, teachers can select from a range of pre-formatted questions that align with the Education Review Office (ERO) standards for each stage of schooling. Answers are output in a standardised, easy to understand report, showing how the individual is tracking against the Professional standards, and any improvements made since the last appraisal. </p>
+
+      <p class="space-below-please">Teachers can request contributions from colleagues, leaders and students. By gathering this data in a constructive and learning-focused system, teachers and schools can then use it as a base for building a personalised development plan for each teacher.</p>
+
+      <h3>Journals</h3>
+      <p>Journals are where evidence of professional development is created and stored. Journals offer teachers professional standards-focused goal tracking, alongside space for personal reflections and feedback. Teachers set their own goals, and are also able to log their progress against school-set objectives. Teachers Council  standards are updated in the system with each new release, ensuring teachers are always able to set pertinent goals.</p>
+
+      <p class="space-below-please">Within the journals section is space for lesson planning, reading lists, observational feedback records, file storing and templated resources.</p>
+
+      <p class="space-below-please">Teachers renewing their mandatory Teacher Registration can output reports showing their teaching and learning records, which can be easily shared with the Teachers Council. Administrators can also produce school-wide reports showing how staff are tracking and how well staff are engaging with the InterLEAD Connector system. Leaders within schools also have access to a Leadership Reflector tool, focused on building great school leaders. Student Voice offers the chance for students to give feedback for staff, when requested.</p>
+
+      <div class="quote-section clearfix">
+        <img src="{{ "/img/case-studies/interlead-5.png" | prepend: site.baseurl }}" alt="Blockhouse Bay Baptist Kindergarten, Auckland" class="quote-image" />
+        <div class="quote-container">
+          <h2 class="quote-heading">Testimonials from InterLEAD Connector users</h2>
+          <p class="quote-opening">Our kindergarten has been using InterLEAD Connector for three years and we have found it to be an excellent tool for creating a culture within our teaching team where we are continually improving our teaching practice.</p>
+
+          <p class="quote-by-text space-below-please">Robyn Woollett, Blockhouse Bay Baptist Kindergarten, Auckland.</p>
+        </div>
+        <img src="{{ "/img/case-studies/interlead-6.png" | prepend: site.baseurl }}" alt="Blockhouse Bay Baptist Kindergarten, Auckland" class="quote-image" />
+        <div class="quote-container">
+          <p>InterLEAD Connector is an intelligent system. What I particularly appreciate is how it goes beyond being a storage system for teachers to challenging them. It’s easy to use, is visibly strengthening teaching as inquiry, is supporting teachers to develop greater insight into their teaching practice and they are making better choices and decisions. </p>
+
+          <p class="quote-by-text">Phil Palfrey, Principle of Manurewa East School, Auckland</p>
+          <p class="quote-closing">
+          </p>
+        </div>
+      </div>
     </div>
 
     {% include other-case-studies.html %}
