--- a/src/case-studies/index.html
+++ b/src/case-studies/index.html
@@ -174,15 +174,15 @@ menuorder: 2
         </a>
         <div class="item-text">
           <div class="item-text-head">
-            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Appraisal Connector</a></h2>
-            <h3 class="item-sub-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">Interlead Consultants</a></h3>
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">InterLEAD Connector</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}">InterLEAD Consultants</a></h3>
           </div>
           <div class="item-text-body">
             <div class="item-icons">
               <i class="icon icon-desktop tip"></i>
               <i class="icon icon-cog tip"></i>
             </div>
-            <p>Media Suite developed the online appraisal system which is enhancing the professional learning of New Zealand teachers.</p>
+            <p>InterLEAD Connector is a nationally used, future-focused system for managing and guiding the professional development of teachers.</p>
             <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
           </div>
         </div> <!-- .item-text -->
