Tweaks to case study

--- a/src/case-studies/appraisal-connector/index.html
+++ b/src/case-studies/appraisal-connector/index.html
@@ -31,10 +31,10 @@ excerpt: InterLEAD chose Media Suite to develop the software behind InterLEAD Co
 
     <div class="max-1000 align-left space-below-please">
       <h2>Teaching is hard work</h2>
-      <p>In 2019, a shortfall of 850 qualified teachers is expected nationwide. In 2018, teacher strikes and pay negotiations brought to light what teachers are dealing with. Setting pay issues aside, teachers identified the huge workload they are expected to shoulder, the hours they put in to their students’ success, and the roles they have to play each week. Teachers are time poor.</p>
+      <p>In 2019, a shortfall of 850 qualified teachers is <a href="https://www.beehive.govt.nz/release/new-plan-address-teacher-shortage" target="_blank">expected nationwide</a>. In 2018, teacher strikes and pay negotiations brought to light what teachers are dealing with. Setting pay issues aside, teachers identified the huge workload they are expected to shoulder, the hours they put in to their students’ success, and the roles they have to play each week. Teachers are time poor.</p>
       <p>On top of the industry-wide challenges is a Ministry of Education requirement for all teachers to provide evidence of professional development when applying for renewal of their teaching registration - a compulsory process.</p>
 
-      <p class="space-below-please">As fewer people choose the teaching profession, schools face new challenges. Fewer teachers in training means fewer potential employees for schools. As schools are hiring teachers from this limited pool, all are competing for an even smaller subset of people considered to be talented, high achieving professionals. Thus, schools are now facing a similar situation to many private companies where competition for skilled employees is high. 
+      <p class="space-below-please">As fewer people choose the teaching profession, schools face new challenges. Fewer teachers in training means fewer potential employees for schools. As schools are hiring teachers from this limited pool, all are competing for an even smaller subset of people considered to be talented, high achieving professionals. <a href="https://www.interlead.co.nz/appraisal-connector/theres-a-global-appraisal-revolution/" target="_blank">Thus, schools are now facing a similar situation to many private companies where competition for skilled employees is high.</a> Schools urgently need a modern, future-focused system targeted at the professional development of teachers.
       </p>
 
       <h2>Learning and growth</h2>
@@ -45,7 +45,7 @@ excerpt: InterLEAD chose Media Suite to develop the software behind InterLEAD Co
         <p><br/>InterLEAD Consultants</p>
       </div>
 
-      <p>Traditional evaluation systems are focused on rating others, but by only rating others, an environment of distrust is created. Teachers are focused on surviving the process of being evaluated, rather than engaging with it, and learning from it. Such a system defines a person by what they do or don’t know, and not what they hope to be, what they aspire to do, or what they want to learn. Such a system is no longer the best choice for a modern, people-focussed workplace.</p>
+      <p>Traditional evaluation systems are focused on rating others, but <a href="https://www.interlead.co.nz/appraisal-connector/the-way-schoolscentres-have-done-appraisal-in-the-past-has-reduced-psychological-safety-in-workplaces/" target="_blank">by only rating others, an environment of distrust is created</a>. Teachers are focused on surviving the process of being evaluated, rather than engaging with it, and learning from it. Such a system defines a person by what they do or don’t know, and not what they hope to be, what they aspire to do, or what they want to learn. Such a system is no longer the best choice for a modern, people-focussed workplace.</p>
 
       <p class="space-below-please wrap-fix">As schools approach changes to the workforce, teachers are asking for change. The MoE professional development requirements can be time consuming to produce when only approached every few years. InterLEAD Connector keeps continuous, detailed records of a teacher’s learning journey, which makes meeting those requirements as simple as outputting the system’s stored data.</p>
 
@@ -59,7 +59,7 @@ excerpt: InterLEAD chose Media Suite to develop the software behind InterLEAD Co
       <img src="{{ "/img/case-studies/interlead-4.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please image-centre" />
 
       <h3>Appraisals</h3>
-      <p>Appraisals support teachers in analysing their own performance from a growth perspective, offering step by step progress towards a high level of competency in key skills or areas. Teachers can then self-review as they work towards this competency, using a guided process at an accelerated pace.</p>
+      <p>Appraisals support teachers in analysing their own performance from a growth perspective, offering step by step progress towards a high level of competency in key skills or areas. <a href="https://www.interlead.co.nz/why-interlead-connector-is-a-powerful-development-tool-and-other-articles-of-interest/" target="_blank">Teachers can then self-review as they work towards this competency, using a guided process at an accelerated pace.</a></p>
 
       <p>Rather than being subject to a top-down internal evaluation process, teachers can select from a range of pre-formatted questions that align with the Education Review Office (ERO) standards for each stage of schooling. Answers are output in a standardised, easy to understand report, showing how the individual is tracking against the Professional standards, and any improvements made since the last appraisal. </p>
 
