--- a/src/case-studies/index.html
+++ b/src/case-studies/index.html
@@ -182,7 +182,7 @@ menuorder: 2
               <i class="icon icon-desktop tip"></i>
               <i class="icon icon-cog tip"></i>
             </div>
-            <p>InterLEAD Connector is a nationally used, future-focused system for managing and guiding the professional development of teachers.</p>
+            <p>Media Suite developed the online appraisal system enhancing the professional learning of New Zealand teachers.</p>
             <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
           </div>
         </div> <!-- .item-text -->
