Enabled we're hiring badge on home page

--- a/src/index.html
+++ b/src/index.html
@@ -61,12 +61,12 @@ ishome: true
       Learn more about our services
       <i class="icon-down-open-big"></i>
     </a>
-    <!-- <div class="hiring-bubble-container js-fade-in-up-delayed">
+    <div class="hiring-bubble-container js-fade-in-up-delayed">
       <a href="https://careers.mediasuite.co.nz/jobs" class="hiring-bubble jiggle">
         <span class="hiring-text">We're hiring.</span>
         <span class="apply-text">Learn more</span>
       </a>
-    </div> -->
+    </div>
   </section>
 
   <section id="clients-panel" class="content-panel">
