Update video on FWV case study

--- a/src/case-studies/forward-works-viewer/index.html
+++ b/src/case-studies/forward-works-viewer/index.html
@@ -27,7 +27,7 @@ excerpt: Media Suite partnered with North South GIS and Jacobs Engineering Group
     </div>
 
     <div class="video-wrapper space-below-please">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/nDX9JlM716Q?wmode=transparent" frameborder="0" allowfullscreen wmode="Opaque"></iframe>
+      <iframe src="https://player.vimeo.com/video/403219339" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div class="max-1000 align-left space-below-please">
