Update font weight, link colours

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -8,7 +8,7 @@ menuorder: 4
 <div id="main-wrap" class="internal-page people-page">
 
   <div class="panel-inner max-1500 clearfix">
-    <h1 class="lowercase underline-orange">The beautiful young crew</h1>
+    <h1 class="lowercase underline-orange">Meet our team</h1>
 
     <div class="people-container js-isotope">
 
