--- a/src/say-hello/index.html
+++ b/src/say-hello/index.html
@@ -13,9 +13,9 @@ isfullheight: true
 
         <h1 class="lowercase underline-orange">Say hello</h1>
         <div class="say-hello-body">
-          <div class="contact-details-top text-size-24 align-center">
+          <div class="contact-details-top text-size-24 align-center text-black">
             <p><a href="mailto:hello@mediasuite.co.nz" class="fancy-pants-font">hello@mediasuite.co.nz</a></p>
-            <p class="text-black">Phone <a href="tel:+6433652887">+64 3 365 2887</a></p>
+            <p>Phone <a href="tel:+6433652887">+64 3 365 2887</a></p>
           </div>
           <h2 class="lowercase">Contact Details</h2>
           <div class="contact-details-btm clearfix align-center">
