Clear out old images, add Rae, Chris and Subhra to People page

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -176,6 +176,47 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- Chris -->
+      <div id="person-chris" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/chris.png " | prepend: site.baseurl }}" alt="Chris Cain" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png " | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Chris Cain</h2>
+                  <h3 class="bio-sub">Finance Ninja</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/christophercaincc/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-chris.jpg" | prepend: site.baseurl }}" alt="Chris Cain" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>On paper, the guy who carves spoons, paraglides and loves all things Hobbits, may not seem like a natural financial whiz. Chris is here to break such stereotyping and prove that process improvement, financial storytelling, analysis and business modelling can pair pretty darn well with dress ups, making velvet waistcoats and forest hiking. Chris loves a good rabbit (read: hobbit) hole and dives right into the detail to find out how things tick, and how we can make them leaner, faster and stronger. He’s got a head for figures, a heart for community and a hands on attitude. </p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/chris"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Chris</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- Dominic -->
       <div id="person-dominic" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
@@ -720,6 +761,47 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- Rae -->
+      <div id="person-rae" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/rae.png" | prepend: site.baseurl }}" alt="Rae Catley-Maurice" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Rae Catley-Maurice</h2>
+                  <h3 class="bio-sub">Project Lead</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/rae-catley-maurice-0347ab8" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-rae.jpg" | prepend: site.baseurl }}" alt="Rae" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>The first thing you should know about Rae? She loves the colour purple, big time. The next most important things include her keen eye for lightweight, efficient processes and an instinct for people, communication and effective working relationships as we dive into awesome projects. She brings with her two decades of experience working with large ecommerce systems focusing on building robust, reliable and secure software. Rae loves getting her hands dirty up front, ensuring the problem is well-specified and we are building the right thing. A cricket buff, keen skier and recently returned expat, you’ll find her praising New Zealand weather, eating all the good things, and raving about having a lawn she can mow.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/rae"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Rae</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- Sam -->
       <div id="person-sam" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
@@ -835,6 +917,47 @@ menuorder: 4
         </div>
         <!-- .bio-wrap -->
         <h3 class="person-name-hover">Stu</h3>
+      </div>
+      <!-- .person-wrap -->
+
+      <!-- Subhra -->
+      <div id="person-subhra" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/subhra.png " | prepend: site.baseurl }}" alt="Subhra Borkakati" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png " | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Subhra Borkakati</h2>
+                  <h3 class="bio-sub">Full-stack Developer</h3>
+                  <span class="linkedin-container">
+                    <a href="https://www.linkedin.com/in/subhramitra/" class="linkedin-link" target="_blank">
+                      <img src="{{ "/img/linkedin-logo.png " | prepend: site.baseurl }}" alt="Linkedin logo" class="linkedin-img">
+                    </a>
+                  </span>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-subhra.jpg" | prepend: site.baseurl }}" alt="Subhra Borkakati" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>If there’s a dog around, Subhra will find it and pat it. That’s a fact. Honorary Friday Office Dog, Ranger, can attest to that. Second to dogs is coding. Subhra brings some serious passion and a love of learning to his craft as a Media Suite full stack dev. Coding is his jam, and he’s up for any language or framework on offer. Despite having lived in Canterbury only three years, he’s just as passionate about his new home, and captures some stunning shots on his regular photographic adventures. He must be the first ever Suitey to describe himself as “not a foodie”, and thus will be gradually brainwashed.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/stu"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Subhra</h3>
       </div>
       <!-- .person-wrap -->
 
