Update text on home page for Abi

--- a/src/index.html
+++ b/src/index.html
@@ -160,13 +160,10 @@ ishome: true
             </div>
             <div class="col third-col" id="culture-col-2">
               <ul class="no-list-style">
-                <li>Curiosity</li>
+                <li>Stay curious</li>
+                <li>Freedom with responsibility</li>
                 <li>Openness</li>
-                <li>Freedom</li>
-                <li>Accountability</li>
-                <li>Integrity</li>
-                <li>Learning</li>
-                <li>Value</li>
+                <li>Deliver value</li>
               </ul>
               <a href="{{ "/culture" | prepend: site.baseurl }}" class="drop-btn orange-bg">Our culture</a>
             </div>
